--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "node-express-app",
   "version": "1.0.0",
   "description": "Node express assignment",
-  "main": "app.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "concurrently \"npm run server\" \"npm run client\"",
+    "start": "node --watch ./backend/server.js",
+    "dev": "concurrently \"npm run start\" \"npm run client\"",
     "client": "npm run serve:frontend",
-    "server": "node --watch ./backend/server.js",
     "serve:frontend": "live-server ./frontend"
   },
   "author": "Osman Butt",
@@ -16,7 +16,8 @@
     "concurrently": "^8.2.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "live-server": "^1.2.2"
